--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native-reanimated": "^1.2.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
-    "react-navigation-drawer": "^2.3.1"
+    "react-navigation-drawer": "^2.3.1",
+    "react-navigation-stack": "^1.10.3"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0"
