--- a/app.json
+++ b/app.json
@@ -25,6 +25,9 @@
     ],
     "ios": {
       "supportsTablet": true
-    }
-  }
+    },
+    "entryPoint": "node_modules/expo/AppEntry.js"
+  },
+  "displayName": "Fab_Lab_App",
+  "name": "Fab_Lab_App"
 }
