--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "web": "expo start --web"
   },
   "dependencies": {
     "expo": "^35.0.0",
-    "js-sha1": "^0.6.0",
-    "moment": "^2.24.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-    "react-native-a": "^1.0.1",
+    "react-native": "0.59.10",
     "react-native-gesture-handler": "^1.3.0",
-    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-reanimated": "^1.2.0",
+    "react-native-screens": "1.0.0-alpha.23",
+    "react-native-unimodules": "0.6.0",
     "react-native-web": "^0.11.7",
+    "js-sha1": "^0.6.0",
+    "moment": "^2.24.0",
+    "react-native-a": "^1.0.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.1",
     "react-navigation-stack": "^1.10.3",
