--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "taupe",
+  "name": "FabLabApp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -19,6 +19,7 @@
     "react-native-a": "^1.0.1",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-netinfo": "^1.1.0",
     "react-native-reanimated": "^1.4.0",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
