--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,8 +1,8 @@
 platform :ios, '9.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-target 'taupe' do
-  # Pods for taupe
+target 'FabLabApp' do
+  # Pods for FabLabApp
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
   pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
   pod 'RCTRequired', :path => "../node_modules/react-native/Libraries/RCTRequired"
@@ -34,7 +34,7 @@ target 'taupe' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
-  target 'taupeTests' do
+  target 'FabLabAppTests' do
     inherit! :search_paths
     # Pods for testing
   end
@@ -42,10 +42,10 @@ target 'taupe' do
   use_native_modules!
 end
 
-target 'taupe-tvOS' do
-  # Pods for taupe-tvOS
+target 'FabLabApp-tvOS' do
+  # Pods for FabLabApp-tvOS
 
-  target 'taupe-tvOSTests' do
+  target 'FabLabApp-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
