--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-native": "^0.61.5",
     "react-native-a": "^1.0.1",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-htmlview": "^0.15.0",
+    "react-native-hyperlinked-text": "^1.0.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-netinfo": "^1.1.0",
     "react-native-reanimated": "^1.4.0",
