--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,8 +1,8 @@
 platform :ios, '9.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-target 'FabLabApp' do
-  # Pods for FabLabApp
+target 'FabLabDedale' do
+  # Pods for FabLabDedale
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
   pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
   pod 'RCTRequired', :path => "../node_modules/react-native/Libraries/RCTRequired"
@@ -34,7 +34,7 @@ target 'FabLabApp' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
-  target 'FabLabAppTests' do
+  target 'FabLabDedaleTests' do
     inherit! :search_paths
     # Pods for testing
   end
@@ -42,10 +42,10 @@ target 'FabLabApp' do
   use_native_modules!
 end
 
-target 'FabLabApp-tvOS' do
-  # Pods for FabLabApp-tvOS
+target 'FabLabDedale-tvOS' do
+  # Pods for FabLabDedale-tvOS
 
-  target 'FabLabApp-tvOSTests' do
+  target 'FabLabDedale-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
