--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-redux": "^7.1.3",
     "redux": "^2.0.0",
     "redux-persist": "^6.0.0",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "watchman": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
@@ -45,6 +46,8 @@
     "preset": "react-native"
   },
   "rnpm": {
-      "assets": ["./SRC/Vue/ressources/fonts/"]
+    "assets": [
+      "./SRC/Vue/ressources/fonts/"
+    ]
   }
 }
